# sm-parameters-repo

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.py
examples/: 01_basic_calculations.ipynb  02_standard_model.ipynb  03_experimental_predictions.ipynb  04_monte_carlo_analysis.ipynb
scripts/: D0.npy  D1.npy  D2.npy  TSQVT_final_predictions.py  TSQVT_numerical_predictions_FINAL.py  construct_DF.py  construct_DF_runlog.json  generate_plots.py  pyproject.toml  run_predictions.py  run_predictions_full.py
scripts/tsqvt.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/: test_core_2.py  test_gauge.py  test_rg.py  test_spectral.py
tsqvt/: __init__.py
tsqvt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tsqvt/core/: __init__.py  condensation.py  krein_space.py  spectral_manifold.py
tsqvt/experimental/: __init__.py  bec.py  collapse.py  metamaterials.py
tsqvt/gauge/: __init__.py  coefficients.py  projectors.py  standard_model.py
tsqvt/rg/: __init__.py  matching.py  running.py  thresholds.py
tsqvt/spectral/: __init__.py  dirac_operators.py  finite_geometry.py  heat_kernel.py
tsqvt/utils/: __init__.py  constants.py  plotting.py
