[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tsqvt"
version = "1.0.0"
description = "Twistorial Spectral Quantum Vacuum Theory: A framework for quantum gravity and Standard Model parameter derivation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kerym Sanjuan", email = "kerym.sanjuan@uned.es"}
]
maintainers = [
    {name = "Kerym Sanjuan", email = "kerym.sanjuan@uned.es"}
]
keywords = [
    "quantum gravity",
    "standard model",
    "twistor theory",
    "noncommutative geometry",
    "spectral action",
    "gauge theories",
    "renormalization group",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.10.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.3.0",
    "h5py>=3.7.0",
    "numba>=0.56.0",
    "statsmodels>=0.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "nbsphinx>=0.9",
    "sphinx-autodoc-typehints>=1.22",
]
notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=3.0",
    "ipywidgets>=8.0",
]
gpu = [
    "jax[cuda11_pip]>=0.4",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "nbsphinx>=0.9",
    "jupyter>=1.0",
    "jupyterlab>=3.0",
]

[project.urls]
Homepage = "https://github.com/kerym/TSQVT"
Documentation = "https://tsqvt.readthedocs.io/"
Repository = "https://github.com/kerym/TSQVT"
"Bug Tracker" = "https://github.com/kerym/TSQVT/issues"
Changelog = "https://github.com/kerym/TSQVT/blob/main/CHANGELOG.md"

[project.scripts]
tsqvt-predict = "tsqvt.cli:predict"
tsqvt-analyze = "tsqvt.cli:analyze"
tsqvt-validate = "tsqvt.cli:validate"

[tool.setuptools]
packages = ["tsqvt", "tsqvt.core", "tsqvt.spectral", "tsqvt.gauge", "tsqvt.rg", "tsqvt.experimental", "tsqvt.utils"]

[tool.setuptools.package-data]
tsqvt = ["data/*.csv", "data/*.json", "data/*.npy"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=tsqvt --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["tsqvt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
